# monospace-ocr

./: README.md  cluster.py  ocr.py  pyproject.toml  run.sh  train.sh  train_bot.in  train_bot.txt  train_top.in  train_top.txt
